--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,94 @@
-# DataSource configuration
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=ACM
+# ===============================
+# SERVICE PARAMS
+# ===============================
+server.port=8099
+spring.application.name =test-service
+spring.cloud.config.uri = http://localhost:8888
+
+## LOG LEVEL for ALL classes
+#logging.level.root=DEBUG
+## LOG LEVEL for package com.acm
+logging.level.com.acm=DEBUG
+
+zuul.host.connect-timeout-millis=600000
+zuul.host.socket-timeout-millis=600000
+eureka.client.register-with-eureka=true
+eureka.client.service-url.defaultZone= http://localhost:8761/eureka/
+eureka.client.fetch-registry=true
+# ===============================
+# DATA BASE PARAMS - SQL Server using Mssql-jdbc Driver
+# ===============================
+
+spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ACM
 spring.datasource.username=sa
 spring.datasource.password=sql
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-server.port=8099 
-# Elasticsearch configuration for REST client
-spring.data.elasticsearch.client.cluster-nodes=http://localhost:9200
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
+spring.jpa.show-sql=true
+
+#maximum number of milliseconds that a client will wait for a connection 30000ms (30 seconds)
+spring.datasource.hikari.connectionTimeout = 60000
+#maximum pool size
+spring.datasource.hikari.maximumPoolSize=50
+#maximum idle time for connection 600000 (10 min)
+spring.datasource.hikari.idleTimeout=600000
+# maximum lifetime in milliseconds of a connection in the pool after it is closed 1800000 (30 minutes).
+spring.datasource.hikari.maxLifetime= 600000
+## LOG debug TRACE
+#logging.level.com.zaxxer.hikari.HikariConfig=DEBUG 
+#logging.level.com.zaxxer.hikari=TRACE
+
+spring.datasource.test-on-borrow=true
+spring.datasource.validation-query=SELECT 1
+
+## Hibernate Properties
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = none
+
+# ===============================
+# SECURITY CONFIG
+# ===============================
+security.oauth2.resource.user-info-uri=http://localhost:9999/users/principal
+
+# ===============================
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+# ===============================
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=5MB
+spring.servlet.multipart.max-request-size=100MB
+spring.servlet.multipart.location=${user.home}/ged/temp
+
+# ===============================
+# Monitoring with prometheus and grafana 
+# ===============================
+management.endpoint.metrics.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoints.web.exposure.exclude=env
+management.endpoint.health.show-details=always
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+# ===============================
+##  Opentracing
+# ===============================
+opentracing.jaeger.service-name=credit-service
+opentracing.jaeger.enabled=true
+opentracing.jaeger.udp-sender.host=172.16.2.65
+opentracing.jaeger.udp-sender.port=6831 
+opentracing.jaeger.log-spans=true 
+
+# ===============================
+##  Ib Environment
+# ===============================
+ib.environment.oauthUrl = http://172.16.4.103:9899/
+ib.environment.apiUrl = http://172.16.4.103:8080/
+
+# ===============================
+##  cron
+# ===============================
+# run every 1 hours
+cron.expression.loansOfSanad.batch=0 0 0/1 * * ?
+elasticsearch.url=localhost:9200
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
