--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,7 @@ eureka.client.fetch-registry=true
 # ===============================
 
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ACM
+spring.datasource.url=jdbc:sqlserver://localhost;databaseName=ACM_ZTM_Integration
 spring.datasource.username=sa
 spring.datasource.password=sql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
