mise a jour -youssef

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 # SERVICE PARAMS
 # ===============================
 server.port=8099
-spring.application.name =test-service
+spring.application.name =dashboarding-service
 spring.cloud.config.uri = http://localhost:8888
 
 ## LOG LEVEL for ALL classes
@@ -25,6 +25,7 @@ spring.datasource.username=sa
 spring.datasource.password=sql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.show-sql=true
+spring.datasource.sql-script-encoding=UTF-8
 
 #maximum number of milliseconds that a client will wait for a connection 30000ms (30 seconds)
 spring.datasource.hikari.connectionTimeout = 60000
