--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
 			<scope>import</scope>
 			<type>pom</type>
 		</dependency>
+		<!--authentication-->
 	</dependencies>
 	<build>
 		<plugins>
